use `LinkedList` methods in `PathManipulator`